--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.modelmapper</groupId>
+          <artifactId>modelmapper</artifactId>
+          <version>2.3.2</version>
+      </dependency>
   </dependencies>
 
   <build>
